# MacMaid

./: .gitignore  CLAUDE.md  README.md  STATUS.md  cleaner.py  config.json  config.py  emailer.py  history.py  main.py  pyproject.toml  reporter.py  requirements.txt  reviewer.py  scheduler.py  url_handler.py
modules/: __init__.py  base.py  browsers.py  caches.py  dev_junk.py  disk_health.py  duplicates.py  ios_backups.py  large_files.py  login_items.py  logs.py  mail.py  memory.py  thermal.py  trash.py  xcode_sims.py
tests/: test_base.py  test_browsers.py  test_caches.py  test_cleaner.py  test_config.py  test_dev_junk.py  test_disk_health.py  test_duplicates.py  test_emailer.py  test_history.py  test_ios_backups.py  test_large_files.py  test_login_items.py  test_logs.py  test_mail.py  test_main.py  test_main_review.py  test_memory.py  test_reporter.py  test_reviewer.py  test_scheduler.py  test_scheduler_url.py  test_thermal.py  test_trash.py  test_url_handler.py  test_xcode_sims.py
