[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "macmaid"
version = "0.1.0"
description = "macOS maintenance tool — scan, report, and clean junk"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "send2trash>=1.8.0",
    "flask>=3.0.0",
]

[project.scripts]
macmaid = "main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
